--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.3",
-    "gh-pages": "^3.2.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
@@ -50,5 +49,8 @@
   "description": "Learning React From Zero to Ninja",
   "main": "index.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
